# BIM

./: BimScene.h  CMakeLists.txt  ElementRecognizer.cpp  ElementRecognizer.h  GenericMeshConstructor.cpp  GeometryData.h  GroundMeshConstructor.cpp  OtherElement.h  PointSetLoader.cpp  README.md  RoofElement.cpp  WallSharedEdgeElement.h  WindowMeshConstructor.cpp  main.cpp
headers/BIM_element/: BimElement.h  BimElementType.h
headers/recognition/: RecognizeWall.h
headers/reconstruction/: ConstructOthers.h
headers/ui/: ViewerApp.h
headers/utils/: Conversions.h  GeometryData.h
headers/viewer/: MeshVisualizer.h  PointSetVisualizer.h
sources/io/: PointSetLoader.cpp
sources/recognition/: RecognizeWall.cpp
sources/reconstruction/: ConstructOthers.cpp
sources/ui/: ViewerApp.cpp
sources/utils/: Conversions.cpp
sources/viewer/: MeshVisualizer.cpp  PointSetVisualizer.cpp
src/: main.cpp
src/bim/: Bim.cpp  Bim.h  BimElement.cpp  BimElement.h  BimElementType.h  GroundElement.cpp  GroundElement.h  OtherElement.cpp  RoofElement.h  WallElement.cpp  WallElement.h
src/io/: PointSetLoader.h
src/recognition/: PlaneRecognizer.cpp  PlaneRecognizer.h
src/reconstruction/: AdvancingFrontSurfaceReconstruction.cpp  AdvancingFrontSurfaceReconstruction.h  ConstructPlane.cpp  ConstructPlane.h  GenericMeshConstructor.h  GroundMeshConstructor.h  IElementMeshConstructor.h  PoissonSurfaceReconstruction.cpp  PoissonSurfaceReconstruction.h  RoofMeshConstructor.cpp  RoofMeshConstructor.h  ScaleSpaceSurfaceReconstruction.cpp  ScaleSpaceSurfaceReconstruction.h  (+3 more)
(+16 files in other folders)
